# python-forexconnect

./: .travis.yml  CMakeLists.txt  Dockerfile  README.rst
cmake/: FindForexConnectAPI.cmake
example/: dual_moving_average.py  example1.py  realtime_chart.py  save_historical_data.py  tick_animation.py  user_info.py
example/lib/: login_manager.py  realtime_chart.py
forexconnect/: CMakeLists.txt
forexconnect/api/include/: ForexConnect.h  IAddRef.h  IO2GColumn.h  IO2GLoginRules.h  IO2GPermissionChecker.h  IO2GRequest.h  IO2GResponse.h  IO2GRow.h  IO2GSession.h  IO2GTable.h  IO2GTimeFrame.h  IO2GTradingSettingsProvider.h  O2G2ptr.h  O2GDateUtils.h  O2GEnum.h  O2GOrderType.h  O2GRequestParamsEnum.h  O2GTransport.h  interfaces_all.h
forexconnect/api/include/Enums/: AccountsColumnsEnum.h  ClosedTradesColumnsEnum.h  MessagesColumnsEnum.h  OffersColumnsEnum.h  OrdersColumnsEnum.h  SummariesColumnsEnum.h  TradesColumnsEnum.h
forexconnect/api/include/Readers/: IO2GLastOrderUpdateResponseReader.h  IO2GMarketDataResponseReader.h  IO2GMarketDataSnapshotResponseReader.h  IO2GOrderResponseReader.h  IO2GSystemProperties.h  IO2GTablesUpdatesReader.h  IO2GTimeConverter.h
forexconnect/api/include/Rows/: IO2GAccountRow.h  IO2GClosedTradeRow.h  IO2GMessageRow.h  IO2GOfferRow.h  IO2GOrderRow.h  IO2GSummaryRow.h  IO2GTradeRow.h
forexconnect/api/lib/: libForexConnect.so.1.3.2  libfxmsg.so.1.3.2  libfxtp.so.1.3.2  libgsexpat.so.1.3.2  libgstool3.so.1.3.2  libhttplib.so.1.3.2  liblog4cplus.so.1.0  liblog4cplus.so.4  libpdas.so.1.3.2
forexconnect/cpp_sample/: Login.cpp
forexconnect/sample_tools/: CMakeLists.txt  fxbuild.bat  sample_tools.vcproj
forexconnect/sample_tools/resource/: resource.rc
forexconnect/src/: ForexConnectClient.cpp  ForexConnectClient.h  ForexConnectClient.h.in  SessionStatusListener.cpp  SessionStatusListener.h  TableHandler.cpp  TableHandler.h  pyforexconnect.cpp
